# Celerity

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  .tokeignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  color.cxx  color.hpp  main.cxx  ray.hpp  vec3.cxx  vec3.hpp
.github/: dependabot.yml
.github/workflows/: linux-clang.yml  linux-gcc.yml  linux.yml  windows.yml
Celerity/: CMakeLists.txt
Celerity/include/accel/: bvh.hpp
Celerity/include/camera/: camera.hpp
Celerity/include/imageWriters/: imageWriter.hpp  ppmWriter.hpp
Celerity/include/materials/: dielectric.hpp  lambertian.hpp  material.hpp  metal.hpp
Celerity/include/renderer/: renderer.hpp
Celerity/include/scenes/: manySpheres.hpp  scene.hpp
Celerity/include/shapes/: sphere.hpp
Celerity/include/shared/: hitRecord.hpp  hittable.hpp  hittableList.hpp  utility.hpp
Celerity/src/: main.cxx
Celerity/src/imageWriters/: imageWriter.cxx  ppmWriter.cxx
Celerity/src/materials/: dielectric.cxx  lambertian.cxx  metal.cxx
Celerity/src/renderer/: renderer.cxx
Celerity/src/scenes/: scene.cxx
Celerity/src/shapes/: sphere.cxx
Celerity/src/shared/: hittableList.cxx
The Evolution of Celerity/: Explanations.txt
Tracer/: CMakeLists.txt
Tracer/imageWriters/: CMakeLists.txt
Tracer/imageWriters/include/: imageWriter.hpp  ppmWriter.hpp
Tracer/imageWriters/src/: imageWriter.cxx  ppmWriter.cxx
Tracer/include/: hittable.hpp  hittableList.hpp  sphere.hpp  utility.hpp
Tracer/include/camera/: camera.hpp
Tracer/include/imageWriters/: imageWriter.hpp  ppmWriter.hpp
Tracer/include/materials/: lambertian.hpp  material.hpp  metal.hpp
Tracer/include/shapes/: hittable.hpp  hittableList.hpp  sphere.hpp
Tracer/include/shared/: hitRecord.hpp  hittable.hpp  hittableList.hpp  utility.hpp
Tracer/src/: hittableList.cxx  main.cxx  sphere.cpp
Tracer/src/imageWriters/: imageWriter.cxx  ppmWriter.cxx
Tracer/src/materials/: lambertian.cxx  metal.cxx
Tracer/src/shapes/: sphere.cxx
Tracer/src/shared/: hittableList.cxx
shared/: constexpr.hpp  float.hpp
utilities/: CMakeLists.txt
utilities/include/: color.hpp  progressReporter.hpp
utilities/include/instrumentor/: instrumentor.hpp
utilities/include/math/: ray.hpp  vec3.hpp
utilities/libs/stb/: CMakeLists.txt
utilities/math/: CMakeLists.txt
utilities/math/include/: vec3.hpp
utilities/math/src/: vec3.cxx
utilities/src/: color.cxx
utilities/src/math/: vec3.cxx
